<resources>
    <string name="app_name">MindBodyEarthMK3</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="new_password">New Password</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
</resources>